# Team2_TheySEAME_Rollin

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  Doxyfile  Makefile  README.md
apps/: README.md
apps/Cluster/Dashboardproject/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  qml.qrc
apps/Cluster/Dashboardproject/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
apps/Cluster/Dashboardproject/.qt/deploy_qml_imports/: appDashboardproject.cmake
apps/Cluster/Dashboardproject/.qt/qml_imports/: appDashboardproject_build.cmake  appDashboardproject_conf.rsp
apps/Cluster/Dashboardproject/.qt/rcc/: qrc_appDashboardproject_raw_qml_0.cpp
apps/Cluster/Dashboardproject/.rcc/qmlcache/: appDashboardproject_qmlcache_loader.cpp
apps/Cluster/Dashboardproject/appDashboardproject_autogen/: deps  moc_predefs.h
apps/Cluster/Dashboardproject/appDashboardproject_autogen/UVLADIE3JM/: moc_infoProvider.cpp  moc_infoProvider.cpp.d
apps/Cluster/Dashboardproject/qml/: Main.qml  Screen01.ui.qml  Screen01.ui.qmlfake85673.qmlproject.qtds  appDashboardproject_qml_module_dir_map.qrc
apps/Cluster/Dashboardproject/qml/qml/: Screen01.ui.qmlfake85673.qmlproject.qtds
apps/Cluster/Dashboardproject/qmltypes/: appDashboardproject_foreign_types.txt
apps/Cluster/Dashboardproject/src/: infoProvider.cpp  infoProvider.hpp  infoprovider.cpp  speed.cpp  speed.hpp  status.cpp  status.hpp
apps/Cluster/qtApp/: .gitignore  ANIMATION_REFERENCE.txt  CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp  qml.qrc  qt.conf
apps/Cluster/qtApp/qml/: Constants.qml  Main.qml  Screen01.ui.qml  Screen01.ui.qmlfake85673.qmlproject.qtds  TestCarAnimation.qml  appDashboardproject_qml_module_dir_map.qrc  qml.qrc  qmldir
apps/Cluster/qtApp/qml/3d-assets/FBX/: Sedan1.fbx
apps/Cluster/qtApp/qml/3d-assets/carro/: LowPolyFiatUNO.qml
apps/Cluster/qtApp/qml/3d-assets/models/: Sedan1.glb
apps/Cluster/qtApp/qml/qml/: Screen01.ui.qmlfake85673.qmlproject.qtds
apps/Cluster/qtApp/src/: generalInfo.cpp  generalInfo.hpp  speed.hpp  status.cpp  systemInfo.cpp  systemInfo.hpp
apps/Cluster/qtApp/tests/: CMakeLists.txt  cluster_test.cpp
apps/Cluster/tests/: CMakeLists.txt  README.md  cluster_test.cpp
apps/Raspberry_Pi_5/: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp
apps/Raspberry_Pi_5/CAN/: CAN.cpp  CAN.hpp  CMakeLists.txt  Comms.hpp  README.md  main.c  main.cpp
apps/Raspberry_Pi_5/CAN/include/: CAN.hpp
apps/Raspberry_Pi_5/CAN/src/: CAN.cpp
apps/Raspberry_Pi_5/Evdev/: Evdev.cpp  Evdev.hpp  RemoteControl.cpp  RemoteControl.hpp
apps/Raspberry_Pi_5/RemoteControl/include/: RemoteControl.hpp
apps/Raspberry_Pi_5/RemoteControl/src/: RemoteControl.cpp
apps/rpi5-firmware/: .gitignore  ActuatorCAN.cpp  ActuatorCAN.hpp  ActuatorController.cpp  ActuatorController.hpp  ActuatorDecorator.cpp  ActuatorDecorator.hpp  ActuatorKuksa.cpp  ActuatorKuksa.hpp  Bev.cpp  Bev.hpp  CMakeLists.txt  Car.cpp  Car.hpp  CarCAN.cpp  CarCAN.hpp  CarController.cpp  CarController.hpp  CarDecorator.cpp  CarDecorator.hpp  CarKuksa.cpp  CarKuksa.hpp  Frame.cpp  Frame.hpp  HazardDetector.cpp  HazardDetector.hpp  IActuator.hpp  ICar.hpp  Lka.cpp  Lka.hpp  LkaSolutions.md  README.md  SlidingWindow.cpp  SlidingWindow.hpp  Tsr.cpp  Tsr.hpp  Utils.hpp  main.cpp  mainLka.cpp  mainRemote.cpp  (+2 more)
apps/rpi5-firmware/actuator/: ActuatorCAN.cpp  ActuatorCAN.hpp  ActuatorController.cpp  ActuatorController.hpp  ActuatorDecorator.cpp  ActuatorDecorator.hpp  ActuatorKuksa.cpp  ActuatorKuksa.hpp  CMakeLists.txt  CarActuator.hpp  pythonActuator.cpp
apps/rpi5-firmware/comms/: CAN.cpp  CAN.hpp  CMakeLists.txt  ICAN.hpp  README.md  pythonCAN.cpp
apps/rpi5-firmware/kuksa/val/v2/: KuksaLib.cpp  KuksaLib.hpp  types.pb.cc  types.pb.h
apps/rpi5-firmware/lane_detection/: main.py
apps/rpi5-firmware/lane_detection/runs/segment/train/: args.yaml
apps/rpi5-firmware/lane_detection/runs/segment/train2/: args.yaml
apps/rpi5-firmware/lane_detection/runs/segment/train3/: args.yaml
apps/rpi5-firmware/lane_detection/runs/segment/train4/: args.yaml
apps/rpi5-firmware/middleware/: CMakeLists.txt  Events.hpp  Observer.hpp  Subject.cpp  Subject.hpp
apps/rpi5-firmware/mode_manager/: CMakeLists.txt
apps/rpi5-firmware/mode_manager/remote/: Evdev.cpp  Evdev.hpp  IEvdev.hpp  RemoteControl.cpp  RemoteControl.hpp
apps/rpi5-firmware/perception/: .gitignore  .run_ai_pipeline.py.un~  DUAL_PIPELINE.md  README.md  run_ai_pipeline.py  run_dual_pipeline.py
apps/rpi5-firmware/perception/hailo_lib/: .Camera.py.un~  .CameraCarla.py.un~  .Inference.py.un~  .PostProcessor.py.un~  .__init__.py.un~  Camera.py  DetectionPostProcessor.py  DualInference.py  Inference.py  NamedPipeDetWriter.py  NamedPipeWriter.py  PostProcessor.py  __init__.py
apps/rpi5-firmware/perception/lka/: bev.py  lane_model.py  lane_viz.py  sliding_window.py  virtual_lane.py
apps/rpi5-firmware/perception/lka/tests/: test_lka.py
apps/rpi5-firmware/purePursuit/: CMakeLists.txt  PurePursuit.cpp  PurePursuit.hpp  pythonPurePursuit.cpp
apps/rpi5-firmware/tests/: CANTest.cpp  CMakeLists.txt  CMakeTest.txt  Mocks.h  RemoteControlTest.cpp
apps/rpi5-firmware/tests/integration/: CANTest.cpp  CMakeLists.txt
apps/rpi5-firmware/tests/mocks/: Mocks.h
apps/rpi5-firmware/tests/unit/: CMakeLists.txt  FakeSocketCan.cpp  FakeSocketCan.hpp  Mocks.h  RemoteControlTest.cpp  RemoteControlTests.cpp  SubjectTests.cpp  unitTestCAN.cpp
apps/rpi5-firmware/tsr/: ArucoDetector.py  run_ai_pipeline.py  tsr_kuksa_bridge.py
apps/rpi5-firmware/tsr/hailo_lib/: PostProcessor.py
apps/rpi5-firmware/tsr/models/: labels.txt
apps/stm32-firmware/Control/pid/tests/: CMakeLists.txt  a.out  tests.c
apps/stm32-firmware/tests/: CMakeLists.txt  Makefile  project.yml  setup.sh  speed_tests.c
apps/stm32-firmware/tests/mocks/: mock_tx_api.c  mock_tx_api.h  mock_utils.c  mock_utils.h
libs/libkuksa/: CMakeLists.txt  KuksaLib.cpp  KuksaLib.hpp  README.md  types.pb.cc  types.pb.h  val.grpc.pb.h  val.pb.h
libs/libkuksa/kuksa/val/v2/: val.grpc.pb.cc  val.pb.cc
(+487 files in other folders)
